Slider Works, Grid Works Buggy spacing

--- a/_harp/public/assets/css/app.styl
+++ b/_harp/public/assets/css/app.styl
@@ -5,6 +5,10 @@ brand-primary = #d10077
 light-gray = #ecf0f1
 white = #fff
 
+*
+  -webkit-box-sizing border-box
+  -moz-box-sizing border-box
+  box-sizing border-box
 
 /* ============================
    Grid
@@ -21,42 +25,91 @@ white = #fff
 .col
   display inline-block
   height auto
+  padding 10px
   float left
 
 .half
-  width 50%
+  width 100%
 
 .quarter
-  width 25%
+  width 100%
 
 .three-quarters
-  width 75%
+  width 100%
 
 .one-third
-  width 33%
+  width 100%
 
 .two-thirds
-  width 66%
+  width 100%
+
+.small
+  &.half
+    width 50%
+
+  &.quarter
+    width 25%
+
+  &.three-quarters
+    width 75%
+
+  &.three-quarters
+    width 75%
+
+  &.one-third
+    width 33%
+
+  &.two-thirds
+    width 66%
+
+.img-fit
+  width 100%
+  max-width 100%
+
+@media (min-width: 500px)
+  .half
+    width 50%
+
+  .quarter
+    width 25%
+
+  .three-quarters
+    width 75%
+
+  .three-quarters
+    width 75%
+
+  .one-third
+    width 33%
+
+  .two-thirds
+    width 66%
+
+  .small
+    width auto
+
 
 /* ============================
    Globals
    ============================ */
 body
   background light-gray
+  font-family 'Arial' 'Helvetica' 'sans-serif'
 
 /* ============================
    Slider
    ============================ */
 
 .slider
+  display block
   position relative
-  height auto
   width 100%
   overflow hidden
 
 .slide
   position absolute
   display block
+  height auto
   width 100%
   opacity 0
   transition all .5s ease
@@ -65,6 +118,7 @@ body
   &.next
     left 0
   &.active
+    position relative
     opacity 1
     img
       position relative
@@ -73,7 +127,6 @@ body
       max-width 100%
       margin-left auto
       margin-right auto
-      vertical-align middle
 
 .slide-control
   position absolute
@@ -106,10 +159,33 @@ body
    Nav
    ============================ */
 
-.main-nav
+.main-header
   width 100%
-  min-height 80px
+  min-height 110px
+  padding 10px 0
   background brand-primary
+
+.branding
+  display inline-block
+  float left
+  .logo
+    img
+      display inline-block
+      width 100%
+      max-width 100%
+
+.main-nav
+  ul
+    display inline-block
+    float right
+    li
+      display inline-block
+      padding 15px 25px
+      a
+        color white
+        font-size 18px
+        vertical-align middle
+        text-decoration none
 
 /* ============================
    content
@@ -117,3 +193,9 @@ body
 
 .content
   background white
+
+.post-box
+  min-height 200px
+  h1
+    margin-top 0
+    font-weight 500
